--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.18",
+    "file-saver": "^2.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
